# lgrb-auth-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  compose.override.yml  compose.yml  config.yaml.example  rustfmt.toml
.github/workflows/: build.yml  main.yml  prod.yml  testing.yml
assets/: index.html
http/: hc.http  login.hurl  signup.hurl
http/local/: signup.http
http/prod/: hc.http  signup.http
proto/: auth_service.proto  verify_token.proto
src/: lib.rs  main.rs
src/app_state/: app_state.rs
src/domain/: email.rs  error.rs  loggin_attempt.rs  login_attempt.rs  mod.rs  password.rs  two_fa_code.rs  twofa_code.rs  user.rs
src/domain/client/: email.rs
src/domain/data_stores/: banned_token.rs  data_stores.rs  mod.rs  two_fa_code.rs  twofa_code.rs  user.rs
src/grpc/: auth_service.rs
src/routes/: delete_account.rs  health_check.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  signup.rs  verify_2fa.rs  verify_captcha.rs
src/services/: hash_banned_token_store.rs  hash_map_twofa_store.rs  hash_map_user_store.rs  hashmap_two_fa_code_store.rs  mock_email_client.rs  mod.rs
src/services/data_stores/: hashmap_banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
src/services/email/: aws_ses_email.rs  mod.rs
src/utils/: auth.rs  config.rs  constants.rs  jwt.rs  lazy.rs  mod.rs  tracing.rs
tests/api/: delete_account.rs  helpers.rs  login.rs  logout.rs  main.rs  signup.rs  verify_2fa.rs  verify_token.rs
tests/e2e/: .env.example  .gitignore  cypress.config.js  package-lock.json  package.json  playwright.config.js
tests/e2e/cypress/support/: e2e.js
tests/e2e/fixtures/: test-data.json
tests/e2e/tests/api/: signup.spec.js
tests/e2e/tests/ui/: login.spec.js
tests/e2e/utils/: api-helpers.js  global-setup.js  global-teardown.js
