[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
validator = "0.20.0"
thiserror = "2.0.12"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14.0"
tonic-reflection = "0.14"
mockall = "0.13.1"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
lazy_static = "1.5.0"
rand = "0.9.2"
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
config = "0.15.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
color-eyre = "0.6.5"

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
fake = "=4.3.0"

[build-dependencies]
tonic-prost-build = "0.14"
